1.0.0
    * added gemspec 