@@ -1,4 +1,4 @@
-module RedHillConsulting::ForeignKeyMigrations::ActiveRecord
+module RedHillConsulting::AutomaticForeignKey::ActiveRecord
   module Base
     def self.included(base)
       base.extend(ClassMethods)
