@@ -1,2 +1,3 @@
 1.0.0
+    * renamed from foreign_key_migration to automatic_foreign_key
     * added gemspec 
